small fixes, and parameter encapsulation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,10 +11,20 @@ theme: 'material'
 
 plugins:
 - search
-- mkdocstrings:
-    handler: python
+- mkdocs-jupyter
+- mkdocstrings
 
 nav:
   - Home: index.md
   - Reference: reference.md
+  - Examples:
+      - 'Example 1': examples/example_Hydroinnova_rover.ipynb
+      - 'Example 2': examples/example_RDT_station.ipynb
 
+extra_javascript:
+  - javascripts/katex.js
+  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.js
+  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/contrib/auto-render.min.js
+
+extra_css:
+  - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.css
