correction routines updated

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,3 +39,6 @@ extra_javascript:
 
 extra_css:
   - https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.16.7/katex.min.css
+
+markdown_extensions:
+  - admonition
