--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,8 +1,8 @@
 ### Site metadata ###
 
 site_name: CRNPy Documentation
-site_description: Documentation for the CRNPy package.
-site_url: https://github.com/soilwater/crnpy
+site_description: CRNPy is a Python package for the estimation of soil moisture from cosmic-ray neutron data. It provides routines for the correction of neutron counts for environmental effects, the calculation of soil moisture from corrected neutron counts, and the calibration of cosmic-ray neutron probes.
+site_url: https://soilwater.github.io/crnpy/
 repo_url: https://github.com/soilwater/crnpy
 
 ### Build settings ###
