--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ theme:
   name: 'material'
   logo: img/logo/crnpy-logo.svg
   favicon: img/logo/favicon.png
+  custom_dir: docs/overrides
 
 plugins:
 - search
@@ -18,6 +19,7 @@ plugins:
 - social
 - glightbox
 - mkdocs-jupyter:
+    include_source: True
     remove_tag_config:
       remove_input_tags:
         - hide-input
