--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -30,9 +30,9 @@ nav:
   - Sensor description: sensor_description.md
   - Correction routines: correction_routines.md
   - Examples:
-      - 'Example 1': examples/stationary/example_RDT_station.ipynb
-      - 'Example 2': examples/rover/Hydroinnova_rover_example.ipynb
-      - 'Device calibration': examples/calibration/calibration.ipynb
+      - 'Example stationary': examples/stationary/example_RDT_station.ipynb
+      - 'Example rover': examples/rover/Hydroinnova_rover_example.ipynb
+      - 'Example device calibration': examples/calibration/calibration.ipynb
   - Reference: reference.md
 
 
